...
		loginButton.setTitle("Войти", for: .normal)
		loginButton.setTitleColor(.ypBlack, for: .normal)
		loginButton.titleLabel?.font = .boldSystemFont(ofSize: 17)
		loginButton.backgroundColor = .ypWhite
		loginButton.layer.cornerRadius = 16
		loginButton.addTarget(self, action: #selector(didTapLoginButton(_:)), for: .touchUpInside)
		loginButton.accessibilityIdentifier = "auth button"
	}
	
	func configureConstraints() {
		let safeArea = view.safeAreaLayoutGuide
		[unsplashLogoImageView, loginButton].forEach {
			$0?.translatesAutoresizingMaskIntoConstraints = false
...
