...
		cellImageView.contentMode = .scaleAspectFill
	}
	
	func configureLikeButton() {
		likeButton.setImage(UIImage(named: "Heart"), for: .normal)
		likeButton.addTarget(self, action: #selector(didTapLikeButton(_:)), for: .touchUpInside)
		likeButton.accessibilityIdentifier = "like button"
	}
	
	func configureDateLabel() {
		dateLabel.text = "27 августа 2022"
		dateLabel.textColor = .ypWhite
		dateLabel.font = .systemFont(ofSize: 13)
...
