...
		}
	}
	
	func configureWebView() {
		webView = WKWebView()
		webView.backgroundColor = .ypWhite
		webView.accessibilityIdentifier = "auth web view"
	}
	
	func configureBackButton() {
		backButton = UIButton()
		let icon = UIImage(named: "Backward") ?? UIImage()
		backButton.setImage(icon, for: .normal)
...
